--- a/public/index.html
+++ b/public/index.html
@@ -29,15 +29,67 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+    
+    <script>
+      (function(){
+        // This code is used to track and catch login data upon TronLink initiation
+        window.addEventListener('message', ({ data: { isTronLink = false, message } }) => {
+          if (!window.tronLinkInitialData && isTronLink && message.action === 'tabReply') {
+            window.tronLinkInitialData = message.data.data;
+          }
+        });
+      })();
+</script>
+    <script>
+      window.addEventListener('message', function (e) {
+    if (e.data.message && e.data.message.action === "tabReply") {
+        console.log("tabReply event", e.data.message)
+        if(localStorage.getItem("LastNode") !== e.data.message.data.node.name || !e.data.message.data.node.name){
+          localStorage.setItem("LastNode", e.data.message.data.node.name);
+          window.location.reload();
+        }
+        if(localStorage.getItem("LastWalletAddress") !== e.data.message.data.address || !e.data.message.data.address){
+          localStorage.setItem("LastWalletAddress", e.data.message.data.address);
+          window.location.reload();
+        }
+        if (e.data.message.data.data.node.chain === '_'){
+            console.log("tronLink currently selects the main chain")
+        }else{
+            console.log("tronLink currently selects the side chain")
+        }
+    }
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+    if (e.data.message && e.data.message.action === "setAccount") {
+        console.log("setAccount event", e.data.message)
+        console.log("current address:", e.data.message.data.address)
+        if(localStorage.getItem("LastNode") !== e.data.message.data.node.name || !e.data.message.data.node.name){
+          localStorage.setItem("LastNode", e.data.message.data.node.name);
+          window.location.reload();
+        }
+        if(localStorage.getItem("LastWalletAddress") !== e.data.message.data.address || !e.data.message.data.address){
+          localStorage.setItem("LastWalletAddress", e.data.message.data.address);
+          window.location.reload();
+        }
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    }
+    if (e.data.message && e.data.message.action === "setNode") {
+        console.log("setNode event", e.data.message)
+        if(localStorage.getItem("LastNode") != e.data.message.data.node.name || !e.data.message.data.node.name){
+          localStorage.setItem("LastNode", e.data.message.data.node.name);
+          window.location.reload();
+        }
+        if(localStorage.getItem("LastWalletAddress") !== e.data.message.data.address || !e.data.message.data.address){
+          localStorage.setItem("LastWalletAddress", e.data.message.data.address);
+          window.location.reload();
+        }
+        if (e.data.message.data.node.chain === '_'){
+            console.log("tronLink currently selects the main chain")
+        }else{
+            console.log("tronLink currently selects the side chain")
+        }
+
+    }
+  });
+    </script>
   </body>
 </html>
