--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#160a34" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="TRON Smart-Contract testing platform"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Smart-Contract Testing</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -39,57 +39,7 @@
           }
         });
       })();
-</script>
-    <script>
-      window.addEventListener('message', function (e) {
-    if (e.data.message && e.data.message.action === "tabReply") {
-        console.log("tabReply event", e.data.message)
-        if(localStorage.getItem("LastNode") !== e.data.message.data.node.name || !e.data.message.data.node.name){
-          localStorage.setItem("LastNode", e.data.message.data.node.name);
-          window.location.reload();
-        }
-        if(localStorage.getItem("LastWalletAddress") !== e.data.message.data.address || !e.data.message.data.address){
-          localStorage.setItem("LastWalletAddress", e.data.message.data.address);
-          window.location.reload();
-        }
-        if (e.data.message.data.data.node.chain === '_'){
-            console.log("tronLink currently selects the main chain")
-        }else{
-            console.log("tronLink currently selects the side chain")
-        }
-    }
-
-    if (e.data.message && e.data.message.action === "setAccount") {
-        console.log("setAccount event", e.data.message)
-        console.log("current address:", e.data.message.data.address)
-        if(localStorage.getItem("LastNode") !== e.data.message.data.node.name || !e.data.message.data.node.name){
-          localStorage.setItem("LastNode", e.data.message.data.node.name);
-          window.location.reload();
-        }
-        if(localStorage.getItem("LastWalletAddress") !== e.data.message.data.address || !e.data.message.data.address){
-          localStorage.setItem("LastWalletAddress", e.data.message.data.address);
-          window.location.reload();
-        }
-
-    }
-    if (e.data.message && e.data.message.action === "setNode") {
-        console.log("setNode event", e.data.message)
-        if(localStorage.getItem("LastNode") != e.data.message.data.node.name || !e.data.message.data.node.name){
-          localStorage.setItem("LastNode", e.data.message.data.node.name);
-          window.location.reload();
-        }
-        if(localStorage.getItem("LastWalletAddress") !== e.data.message.data.address || !e.data.message.data.address){
-          localStorage.setItem("LastWalletAddress", e.data.message.data.address);
-          window.location.reload();
-        }
-        if (e.data.message.data.node.chain === '_'){
-            console.log("tronLink currently selects the main chain")
-        }else{
-            console.log("tronLink currently selects the side chain")
-        }
-
-    }
-  });
     </script>
+    
   </body>
 </html>
